gg.bnf
<program> ::= <function> { <function> }
<function> ::= <int> <identifier> "(" ")" "{" <statement> ";" "return" <statement> "}"
<statement> ::= <call> | <print> | <if>
<call> ::= <identifier> "(" ")"
<print> ::= "print" "(" <expression> ")"
<if> ::= ...
<exp> ::= <unary_op> <exp> | <int> | <exp> ("+" | "-" | "*" | "/") <exp> | "(" exp ")"
<unary_op> ::= "!" | "~" | "-"
<identifier> ::= [a-zA-Z]\w*

// TODO: Add precedence to BNF
// TODO: Keep up-to-date
